**************
* 11.04.2016     *
**************

- Increased the number of decimals for transmission to two for the
    "Beamline parameters" tab (feature #2711).
 - Replace the .tar  creation and temporary saved in xxxx/tmp by .zip created on the fly

**************
* 05.04.2016     *
**************

- Add new sampleInfo WebServices for EXI
- Add message when existing autoprocessings but filtered by Rsymm I/Sigma

**************
* 21.03.2016     *
**************

- New parameters for diffraction plan : minimum oscillation width
- SMILES added to excel file

**************
* 10.03.2016     *
**************

- Retrieve crystal list at login through rest WS (for EXI)
- WS for workflowStep
- retrieve the image Wilson plot through WS


**************
* 24.02.2016     *
**************

- See FEATURE#2324 for the following changes:
- Renamed "Workflow" tab to "Workflow Log"
- Commented out the display of "Mesh" and "Dehydration" tabs
- If present the "Results" tab is automatically selected
- Renamed "html_XX" tab to "Characterisation_XX" 
- Organisation of the "Results" subtabs: 
    Snapshots/Automesh/Mesh/Line_01/Line_02/Line_03/Characterisation_01/Characterisation_02
- The last subtab is automatically selected

**************
* 09.02.2016     *
**************

- Add site ID in Person table : see BUG#2593
- Remove DAO layer for Person EJBs see TODO#2192
- AutoProc/Phasing refactoring. ToDo#2510
- Changed the number of decimals for exposure time from 2 to 3

***********************************************

New TAG : TAG ISPYB_4.0.2 after SOLEIL updates and before AutoProc/Phasing refactoring. ToDo#2510

**************
* 15.01.2016     *
**************

- replace type Integer by Long for proposalNumber attribute in the SMISWebservice
- correct PX2 beamline name
- additional refactoring of the UpdateFromSMIS class
- add logger in the ToolsForAssembly
- add in the ejb-pom two properties 'shipping.container.capacity' and 'userportal.url'

**************
