@@ -33,10 +33,10 @@ import ispyb.client.mx.sample.AbstractSampleAction;
 import ispyb.client.security.roles.RoleDO;
 import ispyb.common.util.Constants;
 import ispyb.common.util.DBTools;
-import ispyb.common.util.ISPyBParser;
-import ispyb.common.util.ShippingInformation;
-import ispyb.common.util.UploadShipmentUtils;
-import ispyb.common.util.XlsUploadException;
+import ispyb.common.util.upload.ISPyBParser;
+import ispyb.common.util.upload.ShippingInformation;
+import ispyb.common.util.upload.UploadShipmentUtils;
+import ispyb.common.util.upload.XlsUploadException;
 import ispyb.server.common.services.shipping.Shipping3Service;
 import ispyb.server.common.util.ejb.Ejb3ServiceLocator;
 import ispyb.server.common.vos.proposals.Proposal3VO;
