@@ -31,8 +31,8 @@ import ispyb.client.common.BreadCrumbsForm;
 import ispyb.client.common.util.FileUtil;
 import ispyb.common.util.Constants;
 import ispyb.common.util.DBTools;
-import ispyb.common.util.ISPyBParser;
-import ispyb.common.util.ShippingInformation;
+import ispyb.common.util.upload.ISPyBParser;
+import ispyb.common.util.upload.ShippingInformation;
 import ispyb.server.common.services.proposals.Proposal3Service;
 import ispyb.server.common.util.ejb.Ejb3ServiceLocator;
 import ispyb.server.common.vos.proposals.Proposal3VO;
