@@ -31,10 +31,10 @@ import ispyb.client.common.util.Formatter;
 import ispyb.client.common.util.GSonUtils;
 import ispyb.client.security.roles.RoleDO;
 import ispyb.common.util.Constants;
-import ispyb.common.util.EMBLBeamlineEnum;
-import ispyb.common.util.ESRFBeamlineEnum;
-import ispyb.common.util.MAXIVBeamlineEnum;
-import ispyb.common.util.SOLEILBeamlineEnum;
+import ispyb.common.util.beamlines.EMBLBeamlineEnum;
+import ispyb.common.util.beamlines.ESRFBeamlineEnum;
+import ispyb.common.util.beamlines.MAXIVBeamlineEnum;
+import ispyb.common.util.beamlines.SOLEILBeamlineEnum;
 import ispyb.server.common.services.proposals.Proposal3Service;
 import ispyb.server.common.util.ejb.Ejb3ServiceLocator;
 import ispyb.server.common.vos.proposals.Proposal3VO;
