@@ -29,13 +29,13 @@ import ispyb.client.mx.results.ImageValueInfo;
 import ispyb.client.mx.results.SnapshotInfo;
 import ispyb.client.security.roles.RoleDO;
 import ispyb.common.util.Constants;
-import ispyb.common.util.EMBLBeamlineEnum;
-import ispyb.common.util.ESRFBeamlineEnum;
 import ispyb.common.util.IspybFileUtils;
-import ispyb.common.util.MAXIVBeamlineEnum;
 import ispyb.common.util.PathUtils;
-import ispyb.common.util.SOLEILBeamlineEnum;
 import ispyb.common.util.StringUtils;
+import ispyb.common.util.beamlines.EMBLBeamlineEnum;
+import ispyb.common.util.beamlines.ESRFBeamlineEnum;
+import ispyb.common.util.beamlines.MAXIVBeamlineEnum;
+import ispyb.common.util.beamlines.SOLEILBeamlineEnum;
 import ispyb.server.common.util.ejb.Ejb3ServiceLocator;
 import ispyb.server.mx.services.autoproc.ImageQualityIndicators3Service;
 import ispyb.server.mx.services.collections.DataCollection3Service;
