@@ -22,10 +22,10 @@ import fr.improve.struts.taglib.layout.util.FormUtils;
 import ispyb.client.common.util.OptionValue;
 import ispyb.client.mx.container.ViewContainerForm;
 import ispyb.common.util.Constants;
-import ispyb.common.util.ESRFBeamlineEnum;
-import ispyb.common.util.EMBLBeamlineEnum;
-import ispyb.common.util.MAXIVBeamlineEnum;
-import ispyb.common.util.SOLEILBeamlineEnum;
+import ispyb.common.util.beamlines.EMBLBeamlineEnum;
+import ispyb.common.util.beamlines.ESRFBeamlineEnum;
+import ispyb.common.util.beamlines.MAXIVBeamlineEnum;
+import ispyb.common.util.beamlines.SOLEILBeamlineEnum;
 import ispyb.server.common.services.shipping.Container3Service;
 import ispyb.server.common.util.ejb.Ejb3ServiceLocator;
 import ispyb.server.common.vos.shipping.Container3VO;
