@@ -65,10 +65,10 @@ import ispyb.client.mx.collection.DataCollectionBean;
 import ispyb.client.mx.collection.ViewDataCollectionAction;
 import ispyb.client.security.roles.RoleDO;
 import ispyb.common.util.Constants;
-import ispyb.common.util.ESRFBeamlineEnum;
+import ispyb.common.util.HashMapToZip;
 import ispyb.common.util.PathUtils;
 import ispyb.common.util.StringUtils;
-import ispyb.server.common.util.HashMapToZip;
+import ispyb.common.util.beamlines.ESRFBeamlineEnum;
 import ispyb.server.common.util.ejb.Ejb3ServiceLocator;
 import ispyb.server.mx.services.autoproc.AutoProc3Service;
 import ispyb.server.mx.services.autoproc.AutoProcIntegration3Service;
